fix left alignment

--- a/playground/text-editor/src/index.css
+++ b/playground/text-editor/src/index.css
@@ -37,26 +37,27 @@ h1 {
 }
 
 .editor-input {
-  min-height: 150px;
-  resize: none;
+  border: 0;
   font-size: 15px;
-  caret-color: rgb(5, 5, 5);
+  display: block;
   position: relative;
   tab-size: 1;
   outline: 0;
-  padding: 15px 10px;
-  caret-color: #444;
+  padding: 8px 28px;
+  min-height: calc(100% - 16px);
 }
 
 .editor-placeholder {
+  font-size: 15px;
   color: #999;
   overflow: hidden;
   position: absolute;
   text-overflow: ellipsis;
-  top: 15px;
-  left: 10px;
-  font-size: 15px;
+  top: 8px;
+  left: 28px;
+  right: 28px;
   user-select: none;
+  white-space: nowrap;
   display: inline-block;
   pointer-events: none;
 }
@@ -234,7 +235,7 @@ h1 {
 }
 
 .editor-listitem {
-  margin: 8px 32px 8px 32px;
+  margin: 0 32px;
 }
 
 .editor-nested-listitem {
